fixed spacing again

--- a/main.css
+++ b/main.css
@@ -117,7 +117,11 @@ a {
     }
 
     #section-about {
-        width: 80dvw;
+        width: 90dvw;
+    }
+
+    .body-item {
+        margin: auto 5dvw;
     }
 }
 
